# RAG-model-practice

./: .gitignore  README.md  local.env  pyproject.toml  requirements.txt
code/: BedrockManager.py  DocumentProcessor.py  PineconeManager.py  RAGConfig.py  main-test.py  mainRAG.py  test.py
config/: default.yaml
scripts/: run-local.sh
src/rag/: BedrockManager.py  DocumentProcessor.py  OLDsetting.py  PineconeManager.py  mainRAG.py  setting.py
src/rag/config/: AWSBedrockConfig.py  DocumentProcessingConfig.py  EmbeddingModelConfig.py  PineconeConfig.py  RAGConfig.py
src/rag/resources/: Mistrl2-repsonse-sample.json  rag-default.yaml  system-prompt.yaml  tools.yaml
tests/: test_BedrockManager.py  test_PineconeManager.py  test_document_processor.py
